package com.cinemax.salas.modelos;

public enum EstadoButaca {
    DISPONIBLE,
    RESERVADA,
    OCUPADA,
    INHABILITADA
}