package com.cinemax.salas.modelos;

public enum TipoSala {
    NORMAL,
    VIP
}